--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -4,23 +4,95 @@ body
   margin: 0
   width: 100vw
   height: 100vh
-  background: radial-gradient(#2a2a2a,#222)
+  background: radial-gradient(#333,#222)
   overflow-x: hidden
   text-align: center
-
-
-iframe
-  padding: 70px
-  //The following are double decreased:
-  width: 620px
-  height: 877px
   overflow: hidden
+  display: flex
+  flex-flow: column
 
-  box-shadow: 0 0 100px black
-  margin: 100px 0 70px 0
-  background-color: #444
-  color: #aaa
-  border: 0
+
+.iframe
+  display: flex
+  margin-top: 90px
+  overflow-y: scroll
+  flex: 0 1 auto
+  &::-webkit-scrollbar-track
+  	-webkit-box-shadow: inset 0 0 6px #222
+  	border-radius: 10px
+  	background-color: #222
+  &::-webkit-scrollbar
+    width: 12px
+    background-color: #222
+  &::-webkit-scrollbar-thumb
+    border-radius: 10px
+    -webkit-box-shadow: inset 0 0 6px #222
+    background-color: #333
+
+
+
+
+
+  iframe
+    padding: 70px
+    //The following are double decreased:
+    width: 620px
+    height: 877px
+    overflow: hidden
+    user-select: none
+    position: relative
+    transition: 300ms
+    box-shadow: 0 0 100px black
+    margin: 100px 0 70px 0
+    background-color: #444
+    color: #aaa
+    border: 0
+    vertical-align: middle
+
+
+  .move
+    flex: 1
+    // background-color: #222
+    // border: #2a2a2a dashed 10px
+    color: #aaa
+    border-radius: 50px
+    vertical-align: middle
+    height: 877px
+    width: auto
+    margin: 100px 0 100px 0
+    opacity: 0
+    transition: 300ms
+    cursor: pointer
+    &.right
+      & span
+        user-select: none
+        display: block
+        font-size: 50px
+        position: relative
+        top: 50%
+        left: 50%
+        transform: translate(-80%,-50%) rotate(-90deg) scale(0.01)
+        transition: 200ms
+      &:hover span
+        transform: rotate(0deg) scale(1) translate(-50%,-50%)
+
+    &.left
+      & span
+        user-select: none
+        display: block
+        font-size: 50px
+        position: relative
+        top: 50%
+        left: 50%
+        transform: translate(-30%,-50%) rotate(90deg) scale(0.01)
+        transition: 200ms
+      &:hover span
+        transform: rotate(0deg) scale(1) translate(-60%,-50%)
+    &:hover
+      opacity: 1
+      transform: translate(0,0)
+      & span
+        // transform: rotate(0deg) scale(1) translate(-40%,-50%)
 
 #overflow
   width: 300px
