--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -1,5 +1,8 @@
 @import "variables.sass"
 
+html
+  background-color: #222
+
 body
   margin: 0
   width: 100vw
@@ -12,10 +15,13 @@ body
   flex-flow: column
 
 
+
+
 .iframe
   display: flex
   margin-top: 90px
   overflow-y: scroll
+  overflow-x: hidden
   flex: 0 1 auto
   &::-webkit-scrollbar-track
   	-webkit-box-shadow: inset 0 0 6px #222
@@ -42,7 +48,7 @@ body
     user-select: none
     position: relative
     transition: 300ms
-    box-shadow: 0 0 100px black
+    box-shadow: 0 0 100px #111
     margin: 100px 0 70px 0
     background-color: #444
     color: #aaa
