--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -1,5 +1,35 @@
 @import "variables.sass"
 
+.menu
+  display: none
+  opacity: 0
+  position: absolute
+  top: 0
+  left: 0
+  width: 100vw
+  height: 100vh
+  background-color: rgba(0,0,0,0.5)
+  transition: 300ms
+  z-index: 10
+  a
+    display: inline-block
+    color: #aaa
+    background-color: #222
+    border: 1px solid #333
+    padding: 2vw
+    text-align: center
+    margin: 10px
+    border-radius: 10px
+    font-family: Lato
+    text-decoration: none
+    transition: 300ms
+    user-select: none
+    position: relative
+    top: 50%
+    transform: translate(0,-50%)
+    &:hover
+      background-color: #333
+
 
 .sidebar
   display: inline-block
@@ -51,14 +81,14 @@
 .menubar
   height: 30px
   z-index: 10
-  background-color: #333
+  background-color: #2a2a2a
   display: flex
   user-select: none
   & .bar
     display: inline-block
     flex: 1
     height: 30px
-    background-color: #333
+    background-color: #2a2a2a
     color: #aaa
     font-family: Lato
     vertical-align: middle
@@ -77,7 +107,7 @@
     background-size: contain
     background-repeat: no-repeat
     filter: brightness(1)
-    background-color: #333
+    background-color: #2a2a2a
     &:hover
       background-color: #444
       filter: brightness(1.1)
@@ -95,7 +125,7 @@
     background-size: contain
     background-repeat: no-repeat
     filter: brightness(1)
-    background-color: #333
+    background-color: #2a2a2a
     &:hover
       background-color: #444
       filter: brightness(1.1)
@@ -113,7 +143,7 @@
     background-size: contain
     background-repeat: no-repeat
     filter: brightness(1)
-    background-color: #333
+    background-color: #2a2a2a
     &:hover
       background-color: red
       filter: brightness(1.1)
@@ -123,7 +153,7 @@
   position: fixed
   width: 100vw
   top: 30px
-  background-color: #333
+  background-color: #2a2a2a
   color: white
   padding-top: 20px
   padding-bottom: 20px
@@ -168,7 +198,7 @@
 
   select
     padding: 10px
-    background-color: #333
+    background-color: #2a2a2a
     color: white
     border: 1px solid $border
     transition: 300ms
