--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -50,8 +50,8 @@ body
   iframe
     padding: 70px
     //The following are double decreased:
-    width: 620px
-    height: 877px
+    width: 210mm
+    height: 297mm
     overflow: hidden
     user-select: none
     position: relative
