--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -21,9 +21,47 @@ body
   left: 0
   width: 100vw
   height: 100vh
-  background-color: black
+  background-color: #2a2a2a
   z-index: 15
   transition: 500ms
+  #image
+    width: 10vw
+    height: 10vw
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%,-50%)
+    background-image: url("../arts/logo.png")
+    background-position: center
+    background-size: cover
+    background-repeat: no-repeat
+    div
+      width: 100%
+      height: 100%
+      position: relative
+      top: 50%
+      left: 50%
+      transform: translate(-50%,-50%)
+      background-image: url("../arts/logoHard.png")
+      background-position: center
+      background-size: cover
+      background-repeat: no-repeat
+      animation: loading 1s infinite
+      z-index: 20
+  #bg
+    width: 50vw
+    height: 50vw
+    position: relative
+    top: 50%
+    left: 50%
+    transform: translate(0%,-35%)
+    background-image: url("../arts/bLogo.png")
+    background-position: center
+    background-size: cover
+    background-repeat: no-repeat
+    opacity: 0.5
+
+
 
 .iframe
   display: flex
@@ -108,47 +146,6 @@ body
       & span
         // transform: rotate(0deg) scale(1) translate(-40%,-50%)
 
-#overflow
-  width: 300px
-  margin-bottom: 100px
-  background-color: #333
-  border: 2px $overflow solid
-  color: $overflow
-  display: inline-block
-  font-family: Lato
-  border-radius: 10px
-  padding-bottom: 10px
-  opacity: 0
-  transform: translate(0,50px)
-  transition: 500ms
-  h1
-    font-size: 30px
-    width: 100%
-    background-color: #222
-    margin-top: 0
-    padding-top: 10px
-    padding-bottom: 10px
-    border-bottom: 2px dashed $overflow
-    border-radius: 10px
-  .btn
-    display: inline-block
-    background-color: $overflow
-    font-weight: 900
-    border-radius: 5px
-    color: #333
-    padding: 10px
-    cursor: pointer
-    font-size: 20px
-    transition: 300ms
-  .btn.add
-    background-color: $overflow - 50
-    &:hover
-      background-color: $overflow
-  .btn.delete
-    background-color: $overflow -   100
-    &:hover
-      background-color: $overflow - 25
-
 
 
 .caret
@@ -163,3 +160,11 @@ body
     opacity: 0.5
   100%
     opacity: 1
+
+@keyframes loading
+  0%
+    opacity: 0
+  50%
+    opacity: 1
+  100%
+    opacity: 0
