--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -181,6 +181,68 @@
   user-select: none
   perspective: 500px
 
+  .justify
+    margin-left: 10px
+    border-left: 2px dashed #444
+    display: inline-block
+    vertical-align: middle
+
+    #justify-left
+      display: inline-block
+      width: 28px
+      height: 28px
+      margin: 5px 5px 5px 10px
+      border: 1px solid $border
+      transition: 300ms
+      background-image: url("../arts/alignLeft.png")
+      background-position: center
+      background-size: cover
+      cursor: pointer
+      &:hover
+        background-color: #555
+
+    #justify-center
+      display: inline-block
+      width: 28px
+      height: 28px
+      margin: 5px
+      border: 1px solid $border
+      transition: 300ms
+      background-image: url("../arts/alignCenter.png")
+      background-position: center
+      background-size: cover
+      cursor: pointer
+      &:hover
+        background-color: #555
+
+    #justify-right
+      display: inline-block
+      width: 28px
+      height: 28px
+      margin: 5px
+      border: 1px solid $border
+      transition: 300ms
+      background-image: url("../arts/alignRight.png")
+      background-position: center
+      background-size: cover
+      cursor: pointer
+      &:hover
+        background-color: #555
+
+    #justify-full
+      display: inline-block
+      width: 28px
+      height: 28px
+      margin: 5px
+      border: 1px solid $border
+      transition: 300ms
+      background-image: url("../arts/alignJustify.png")
+      background-position: center
+      background-size: cover
+      cursor: pointer
+      &:hover
+        background-color: #555
+
   p
     display: inline-block
     font-family: Lato
@@ -210,7 +272,7 @@
     div
       width: 100%
       height: 100%
-      background-image: url("../arts/logoh.png")
+      background-image: url("../arts/logoHard.png")
       background-position: center
       background-size: cover
       opacity: 0
