--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -99,7 +99,7 @@
 
 .menubar
   height: 30px
-  z-index: 10
+  z-index: 20
   background-color: #2a2a2a
   display: flex
   user-select: none
@@ -168,6 +168,105 @@
       filter: brightness(1.1)
 
 
+
+#shortcut
+  position: absolute
+  top: 100%
+  left: 100%
+  width: 300px
+  height: 100px
+  text-align: center
+  display: none
+  transform: translate(-100%,-100%)
+  color: rgba(255,255,255,0.3)
+  font-family: Lato
+  font-size: 25px
+  z-index: 15
+  transition: 200ms
+  opacity: 0
+
+.doc
+  position: relative
+  display: inline-block
+  z-index: 17
+  color: #aaa
+  background-color: #333
+  box-shadow: 0 0 25px black
+  width: 42mm
+  height: 60mm
+  margin: 25px 10px 25px 10px
+  padding: 14px
+  vertical-align: middle
+  font-family: Lato
+  font-size: 20px
+  user-select: none
+  cursor: pointer
+  transition: 300ms
+  word-wrap: break-word
+  border-radius: 0px
+  box-shadow: none
+  &:hover
+    background-color: #444
+  & emp
+    color: #777
+    font-style: italic
+
+.full-view
+  display: none
+  position: absolute
+  top: 30px
+  left: 0
+  background-color: rgba(20,20,20,0.8)
+  width: 100vw
+  height: 100vh
+  z-index: 15
+  transition: 300ms
+  opacity: 0
+  overflow-y: scroll
+  &::-webkit-scrollbar-track
+  	-webkit-box-shadow: inset 0 0 6px #222
+  	border-radius: 10px
+  	background-color: #222
+  &::-webkit-scrollbar
+    width: 12px
+    background-color: #222
+  &::-webkit-scrollbar-thumb
+    border-radius: 10px
+    -webkit-box-shadow: inset 0 0 6px #222
+    background-color: #333
+  .fv-tools
+    display: block
+    width: 100%
+    height: 50px
+    background-color: #222
+    box-shadow: 0 0 50px black
+    & span
+      display: inline-block
+      height: 50px
+      width: 50px
+      margin: 0
+      padding: 0
+      transition: 300ms
+      cursor: pointer
+      &#trash
+        background-image: url('../arts/bin.png')
+        background-size: cover
+        background-position: center
+        &:hover
+          background-color: #933
+  #docs
+    display: inline-block
+    position: absolute
+    top: 70px
+    left: 0
+    width: 100vw
+    height: 100vw
+    z-index: 16
+
+
+
+
+
 .toolbar
   position: fixed
   width: 100vw
@@ -180,6 +279,29 @@
   z-index: 9
   user-select: none
   perspective: 500px
+
+  #view
+    display: none
+    vertical-align: middle
+    #full-view
+      display: inline-block
+      width: 28px
+      height: 28px
+      margin: 5px
+      border: 1px solid $border
+      transition: 300ms
+      background-image: url("../arts/fullView.png")
+      background-position: center
+      background-size: cover
+      cursor: pointer
+      &:hover
+        background-color: #555
+
+
+
+  #tools
+    display: inline-block
+    vertical-align: middle
 
   .justify
     margin-left: 10px
