--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -306,6 +306,8 @@ canvas#move
         background-image: url('../arts/move.png')
         background-size: cover
         background-position: center
+        &[disabled="true"]
+          filter: brightness(0.3)
         &:hover
           background-color: #333
 #move-bg
