--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -312,7 +312,7 @@ canvas#move
           background-color: #333
 #move-bg
   display: none
-  width: 100vw
+  width: 100%
   height: 100%
   background-color: rgba(0,0,0,0.7)
   position: absolute
