--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -303,7 +303,7 @@ canvas#move
         &:hover
           background-color: #933
       &#move-btn
-        background-image: url('../arts/move.png')
+        background-image: url('../arts/chain.png')
         background-size: cover
         background-position: center
         &[disabled="true"]
