--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -176,6 +176,10 @@ canvas#move
   z-index: 15
   top: 0
   left: 0
+  overflow-x: hidden
+  overflow-y: scroll
+  display: inline-block
+  transition: 0ms
 
 #shortcut
   position: absolute
@@ -337,6 +341,8 @@ canvas#move
     background-color: #333
   & #move-docs
     height: 100% //It should be scroll height here
+    position: absolute
+    z-index: 16
   & #move-tools
     width: 100vw
     position: fixed
