--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -143,7 +143,41 @@ body
       & span
         // transform: rotate(0deg) scale(1) translate(-40%,-50%)
 
-
+#compiling
+  display: none
+  position: absolute
+  z-index: 10
+  transition: 300ms
+  cursor: progress
+  #compiling-cont
+    display: inline-block
+    position: fixed
+    top: 50%
+    left: 50%
+    transform: translate(-50%,-50%)
+    background-color: #222
+    width: 640
+    height: 360
+    color: #aaa
+    font-family: Lato
+    font-size: 30px
+    font-weight: 100
+    padding-top: 20px
+    padding-bottom: 20px
+    border-radius: 50px
+    user-select: none
+    cursor: progress
+    #compiling-gif
+      display: block
+      border-radius: 50px
+      transition: 300ms
+  #bg
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100vw
+    height: 100vh
+    background-color: rgba(0,0,0,0.8)
 
 .caret
   animation: caret 1s infinite
