--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -271,7 +271,7 @@ canvas#move
 #project
   display: none
   vertical-align: middle
-  #title
+  #title,#author
     display: inline-block
     background-color: #222
     color: #aaa
@@ -280,6 +280,9 @@ canvas#move
     border: 0px solid $border
     transition: 300ms
     border-radius: 30px
+    &::selection
+      background-color: rgba(255,150,0,0.5)
+      color: #fff
     &:hover
       background-color: #111
   #all-keys
@@ -304,6 +307,9 @@ canvas#move
       border: 0px solid $border
       transition: 300ms
       border-radius: 30px
+      &::selection
+        background-color: rgba(255,150,0,0.5)
+        color: #fff
       &:hover
         background-color: #111
 
