--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -14,6 +14,12 @@ body
   display: flex
   flex-flow: column
 
+#dummy
+  height: 75vh
+  width: 100%
+  display: block
+  flex: 0
+  background: linear-gradient(transparent, #1a1a1a)
 
 #all
   position: absolute
@@ -64,11 +70,9 @@ body
 
 
 .iframe
-  display: flex
   margin-top: 90px
   overflow-y: scroll
   overflow-x: hidden
-  flex: 0 1 auto
   &::-webkit-scrollbar-track
   	-webkit-box-shadow: inset 0 0 6px #222
   	border-radius: 10px
@@ -80,6 +84,9 @@ body
     border-radius: 10px
     -webkit-box-shadow: inset 0 0 6px #222
     background-color: #333
+  #up
+    display: flex
+    flex: 0 1 auto
 
 
 
