--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -274,7 +274,9 @@ canvas#move
     font-style: italic
   & p
     display: inline-block
+    word-wrap: break-word
     position: relative
+    max-width: 42mm
     top: 50%
     transform: translate(0,-50%)
     border-right: none !important
