--- a/public/bin/menu.sass
+++ b/public/bin/menu.sass
@@ -76,6 +76,17 @@ body
       filter: opacity(0.7)
       &:hover
         filter: opacity(1)
+    #save-file
+      display: inline-block
+      opacity: 0
+      position: relative
+      top: 50%
+      left: 50%
+      z-index: 1
+      transform: scale(0) translate(-50%,-50%)
+      filter: opacity(0.7)
+      &:hover
+        filter: opacity(1)
     #packages
       display: inline-block
       opacity: 0
