--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -481,6 +481,12 @@ canvas#move
         background-position: center
         &:hover
           background-color: #333
+      &#merge-sel
+        background-image: url("../arts/mergeSel.png")
+        background-size: cover
+        background-position: center
+        &:hover
+          background-color: #333
       &#chapter-view
         background-image: url("../arts/chapter.png")
         background-size: cover
