--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -110,6 +110,21 @@ button,input,select,option
     border: 0
     vertical-align: middle
 
+  #sizer
+    display: inline-block
+    width: 20px
+    height: 20px
+    border-radius: 10px
+    background-color: orange
+    background-image: url("../arts/arrowDiagonalS.png")
+    background-position: center
+    background-size: cover
+    position: absolute
+    top: 0px
+    left: 0px
+    transition: 200ms
+    cursor: nw-resize
+    box-shadow: 0 0 10px #222
 
   .move
     flex: 1
