--- a/public/bin/settings.sass
+++ b/public/bin/settings.sass
@@ -1,5 +1,8 @@
 .settings
-  // display: none
+  display: none
+  opacity: 0
+  transition: 300ms
+  z-index: 19
   .setting
     width: 80vw
     height: 80vh
@@ -55,6 +58,12 @@
       background-color: #2a2a2a
       border-radius: 10px
       margin: 10px
+      user-select: none
+      cursor: default
+      h1
+        font-family: Lato
+        color: #aaa
+        padding-top: 20px
       .autosave
         display: flex
         span
@@ -77,6 +86,9 @@
           visibility: hidden
         .checkbox-bg
           flex: 1
+          margin: 0
+          padding: 0
+          border-bottom: none
         .checkbox
           margin: 0 !important
           display: inline-block
@@ -94,17 +106,17 @@
           transition: all .5s ease
           cursor: pointer
           position: absolute
-          left: -3px
-          background: #963
-          box-shadow: 0 0 10px #963
-          &:hover
-            background: #963 + 100
-            box-shadow: 0 0 20px #963 + 100
-
-        .checkbox input[type=checkbox]:checked + label
           left: 50px
           background: #444
           box-shadow: 0 0 10px #222
+          &:hover
+            background: #963
+            box-shadow: 0 0 10px #963
+
+        .checkbox input[type=checkbox]:checked + label
+          left: -3px
+          background: #963 + 100
+          box-shadow: 0 0 20px #963 + 100
 
         input[type="range"]
           cursor: pointer
