--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -30,6 +30,7 @@
     top: 50%
     transform: translate(0,-50%)
     cursor: pointer
+    filter: brightness(0.8)
     &:hover
       background-color: #333
     &#reload
@@ -56,6 +57,7 @@
     top: 50%
     transform: translate(0,-50%)
     cursor: pointer
+    filter: brightness(0.8)
     &:hover
       background-color: #333
 
