--- a/public/bin/master.sass
+++ b/public/bin/master.sass
@@ -208,7 +208,9 @@ button,input,select,option
   animation: caret 1s infinite
   transform: translate(-10px,0) scale(0)
 
-
+[disabled]
+  user-select: none
+  cursor: not-allowed !important
 
 @keyframes caret
   0%
