--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -149,7 +149,7 @@
       padding: 5px
       color: white
       &::before
-        content: "Litery: "
+        content: "Symbole: "
 
 
 .menubar
