--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -177,7 +177,7 @@
     height: 30px
     width: 50px
     transition: 200ms
-    cursor: pointer
+    cursor: default
     background-image: url("../arts/minimize.png")
     background-position: center
     background-size: contain
@@ -195,7 +195,7 @@
     width: 50px
     color: #aaa
     transition: 200ms
-    cursor: pointer
+    cursor: default
     background-image: url("../arts/maximize.png")
     background-position: center
     background-size: contain
@@ -213,7 +213,7 @@
     width: 50px
     color: #aaa
     transition: 200ms
-    cursor: pointer
+    cursor: default
     background-image: url("../arts/exit.png")
     background-position: center
     background-size: contain
