--- a/public/bin/toolbar.sass
+++ b/public/bin/toolbar.sass
@@ -456,6 +456,19 @@ canvas#move
     cursor: pointer
     &:hover
       background-color: #555
+  #print
+    display: inline-block
+    width: 39px
+    height: 39px
+    margin: 5px
+    border: 1px solid $border
+    transition: 300ms
+    background-image: url("../arts/printer.png")
+    background-position: center
+    background-size: cover
+    cursor: pointer
+    &:hover
+      background-color: #555
 
 
 .full-view
