--- a/public/bin/print.sass
+++ b/public/bin/print.sass
@@ -1,4 +1,4 @@
-body
+article
   margin: 0
   padding: 70px
   display: inline-block
@@ -9,6 +9,7 @@ body
   border: 0
   vertical-align: middle
   font-family: Lato
+  page-break-after: always
 
 @font-face
   font-family: Lato
