--- a/app/public/bin/settings.sass
+++ b/app/public/bin/settings.sass
@@ -64,24 +64,16 @@
         font-family: Lato
         color: #aaa
         padding-top: 20px
-      .autosave
-        display: flex
-        span
-          flex: 1
-          color: #aaa
-          font-family: Lato
-          display: inline-block
-      .img-quality
-        display: flex
-        span
-          flex: 1
-          color: #aaa
-          font-family: Lato
-          display: inline-block
       div
         margin: 5px
         padding: 10px
         border-bottom: 2px solid #333
+        display: flex
+        span
+          flex: 1
+          color: #aaa
+          font-family: Lato
+          display: inline-block
         input[type="checkbox"]
           visibility: hidden
         .checkbox-bg
@@ -112,12 +104,20 @@
           &:hover
             background: #963
             box-shadow: 0 0 10px #963
-
         .checkbox input[type=checkbox]:checked + label
           left: -3px
           background: #963 + 100
           box-shadow: 0 0 20px #963 + 100
-
+        select
+          flex: 1
+          background-color: #222
+          color: #aaa
+          border: none
+          outline: none
+          transition: 200ms
+          cursor: pointer
+          &:hover
+            background-color: #111
         input[type="range"]
           cursor: pointer
           background-color: transparent
