--- a/app/public/bin/master.css
+++ b/app/public/bin/master.css
@@ -1,1 +1,263 @@
-body{margin:0;width:100vw;height:100vh;background-color:black;background:radial-gradient(#333, #222);overflow-x:hidden;text-align:center;overflow:hidden;display:flex;flex-flow:column}button,input,select,option{outline:none}#dummy{height:75vh;width:100%;display:block;flex:0;background:linear-gradient(transparent, #1a1a1a)}#all{position:absolute;top:30px;left:0;width:100vw;height:100vh;background-color:#2a2a2a;z-index:15;transition:500ms}#all #image{width:10vw;height:10vw;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);background-image:url("../arts/logo.png");background-position:center;background-size:cover;background-repeat:no-repeat}#all #image div{width:100%;height:100%;position:relative;top:50%;left:50%;transform:translate(-50%, -50%);background-image:url("../arts/logoHard.png");background-position:center;background-size:cover;background-repeat:no-repeat;animation:loading 1s infinite;z-index:20}#all #bg{width:50vw;height:50vw;position:relative;top:50%;left:50%;transform:translate(0%, -35%);background-image:url("../arts/bLogo.png");background-position:center;background-size:cover;background-repeat:no-repeat;opacity:0.5}.iframe{margin-top:90px;overflow-y:scroll;overflow-x:hidden}.iframe::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px #222;border-radius:10px;background-color:#222}.iframe::-webkit-scrollbar{width:12px;background-color:#222}.iframe::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px #222;background-color:#333}.iframe #up{display:flex;flex:0 1 auto}.iframe iframe{padding:70px;width:210mm;height:297mm;overflow:hidden;user-select:none;position:relative;transition:150ms;box-shadow:0 0 100px #111;margin:100px 0 70px 0;background-color:#444;color:#aaa;border:0;vertical-align:middle}.iframe #sizer{display:inline-block;width:20px;height:20px;border-radius:10px;background-color:orange;background-image:url("../arts/arrowDiagonalS.png");background-position:center;background-size:cover;position:absolute;top:0px;left:0px;transition:200ms;cursor:nw-resize;box-shadow:0 0 10px #222}.iframe .move{flex:1;color:#aaa;border-radius:50px;vertical-align:middle;height:877px;width:auto;margin:100px 0 100px 0;opacity:0;transition:300ms;cursor:pointer}.iframe .move.right span{user-select:none;display:block;font-size:50px;position:relative;top:50%;left:50%;transform:translate(-80%, -50%) rotate(-90deg) scale(0.01);transition:200ms}.iframe .move.right:hover span{transform:rotate(0deg) scale(1) translate(-50%, -50%)}.iframe .move.left span{user-select:none;display:block;font-size:50px;position:relative;top:50%;left:50%;transform:translate(-30%, -50%) rotate(90deg) scale(0.01);transition:200ms}.iframe .move.left:hover span{transform:rotate(0deg) scale(1) translate(-60%, -50%)}.iframe .move:hover{opacity:1;transform:translate(0, 0)}#compiling{display:none;position:absolute;z-index:10;transition:300ms;cursor:progress}#compiling #compiling-cont{display:inline-block;position:fixed;top:50%;left:50%;transform:translate(-50%, -50%);background-color:#222;width:640;height:360;color:#aaa;font-family:Lato;font-size:30px;font-weight:100;padding-top:20px;padding-bottom:20px;border-radius:50px;user-select:none;cursor:progress}#compiling #compiling-cont #compiling-gif{display:block;border-radius:50px;transition:300ms}#compiling #bg{position:absolute;top:0px;left:0px;width:100vw;height:100vh;background-color:rgba(0,0,0,0.8)}.caret{animation:caret 1s infinite;transform:translate(-10px, 0) scale(0)}[disabled]:not([disabled=true]):not([disabled=false]){user-select:none;cursor:not-allowed !important}@keyframes caret{0%{opacity:1}50%{opacity:0.5}100%{opacity:1}}@keyframes loading{0%{opacity:0}50%{opacity:1}100%{opacity:0}}
+body {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  background: radial-gradient(#333, #222);
+  overflow-x: hidden;
+  text-align: center;
+  overflow: hidden;
+  display: flex;
+  flex-flow: column;
+}
+
+button, input, select, option {
+  outline: none;
+}
+
+#dummy {
+  height: 75vh;
+  width: 100%;
+  display: block;
+  flex: 0;
+  background: linear-gradient(transparent, #1a1a1a);
+}
+
+#all {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #2a2a2a;
+  z-index: 15;
+  transition: 500ms;
+}
+
+#all #image {
+  width: 10vw;
+  height: 10vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url("../arts/logo2.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#all #image div {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url("../arts/logo2Hard.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  animation: loading 1s infinite;
+  z-index: 20;
+}
+
+#all #bg {
+  width: 50vw;
+  height: 50vw;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(0%, -35%);
+  background-image: url("../arts/bLogo.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+}
+
+.iframe {
+  margin-top: 90px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.iframe::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #222;
+  border-radius: 10px;
+  background-color: #222;
+}
+
+.iframe::-webkit-scrollbar {
+  width: 12px;
+  background-color: #222;
+}
+
+.iframe::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px #222;
+  background-color: #333;
+}
+
+.iframe #up {
+  display: flex;
+  flex: 0 1 auto;
+}
+
+.iframe iframe {
+  padding: 70px;
+  width: 210mm;
+  height: 297mm;
+  overflow: hidden;
+  user-select: none;
+  position: relative;
+  transition: 150ms;
+  box-shadow: 0 0 100px #111;
+  margin: 100px 0 70px 0;
+  background-color: #444;
+  color: #aaa;
+  border: 0;
+  vertical-align: middle;
+}
+
+.iframe #sizer {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: orange;
+  background-image: url("../arts/arrowDiagonalS.png");
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  transition: 200ms;
+  cursor: nw-resize;
+  box-shadow: 0 0 10px #222;
+}
+
+.iframe .move {
+  flex: 1;
+  color: #aaa;
+  border-radius: 50px;
+  vertical-align: middle;
+  height: 877px;
+  width: auto;
+  margin: 100px 0 100px 0;
+  opacity: 0;
+  transition: 300ms;
+  cursor: pointer;
+}
+
+.iframe .move.right span {
+  user-select: none;
+  display: block;
+  font-size: 50px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-80%, -50%) rotate(-90deg) scale(0.01);
+  transition: 200ms;
+}
+
+.iframe .move.right:hover span {
+  transform: rotate(0deg) scale(1) translate(-50%, -50%);
+}
+
+.iframe .move.left span {
+  user-select: none;
+  display: block;
+  font-size: 50px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-30%, -50%) rotate(90deg) scale(0.01);
+  transition: 200ms;
+}
+
+.iframe .move.left:hover span {
+  transform: rotate(0deg) scale(1) translate(-60%, -50%);
+}
+
+.iframe .move:hover {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+#compiling {
+  display: none;
+  position: absolute;
+  z-index: 10;
+  transition: 300ms;
+  cursor: progress;
+}
+
+#compiling #compiling-cont {
+  display: inline-block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #222;
+  width: 640;
+  height: 360;
+  color: #aaa;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: 100;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 50px;
+  user-select: none;
+  cursor: progress;
+}
+
+#compiling #compiling-cont #compiling-gif {
+  display: block;
+  border-radius: 50px;
+  transition: 300ms;
+}
+
+#compiling #bg {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.caret {
+  animation: caret 1s infinite;
+  transform: translate(-10px, 0) scale(0);
+}
+
+[disabled]:not([disabled=true]):not([disabled=false]) {
+  user-select: none;
+  cursor: not-allowed !important;
+}
+
+@keyframes caret {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes loading {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
