--- a/app/public/bin/master.sass
+++ b/app/public/bin/master.sass
@@ -40,7 +40,7 @@ button,input,select,option
     top: 50%
     left: 50%
     transform: translate(-50%,-50%)
-    background-image: url("../arts/logo.png")
+    background-image: url("../arts/logo2.png")
     background-position: center
     background-size: cover
     background-repeat: no-repeat
@@ -51,7 +51,7 @@ button,input,select,option
       top: 50%
       left: 50%
       transform: translate(-50%,-50%)
-      background-image: url("../arts/logoHard.png")
+      background-image: url("../arts/logo2Hard.png")
       background-position: center
       background-size: cover
       background-repeat: no-repeat
